# OpenCSR

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFFTW.cmake
examples/: benchmark.ipynb  wake-comparison.ipynb
ext_lib/: CMakeLists.txt
ext_lib/fftw3/: CMakeLists.txt
models/bmad/benchmark_chicane/: lat.bmad
models/bmad/lcls_cu_bc2/: lcls_cu_bc2.ipynb  run.ipynb
models/bmad/lcls_cu_bc2/template/: Activate_CSR.tao  lat.bmad  tao.init
src/: csr3d_mod.f90  elliptic_integral_mod.f90  external_stuff_mod.f90  fft_mod.f90
tests/: test_csr3d.f90
